--- a/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
+++ b/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
@@ -48,7 +48,7 @@
         android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_username"
-        tools:srcCompat="@drawable/ic_launcher_foreground" />
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/profile_upload_photo"
@@ -67,7 +67,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="27dp"
         android:text="Julija"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/profile_first_name_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_upload_photo" />
 
     <TextView
@@ -77,7 +77,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
         android:text="Pancic"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/profile_last_name_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_first_name" />
 
     <TextView
@@ -87,7 +87,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
         android:text="0631231997"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintStart_toEndOf="@+id/profile_phone_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_last_name" />
 
     <TextView
@@ -97,7 +97,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
         android:text="julijapancic1@gmail.com"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toEndOf="@+id/profile_email_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_phone" />
 
     <TextView
@@ -107,7 +107,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
         android:text="julija123"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
+        app:layout_constraintStart_toEndOf="@+id/profile_password_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_email" />
 
     <Button
@@ -121,7 +121,7 @@
         app:layout_constraintTop_toBottomOf="@+id/profile_password" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/profile_first_name_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
@@ -131,67 +131,67 @@
         app:layout_constraintTop_toBottomOf="@+id/profile_upload_photo" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/profile_last_name_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
         android:layout_marginTop="16dp"
         android:text="@string/profile_last_name_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_first_name_fixed" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/profile_phone_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
         android:layout_marginTop="16dp"
         android:text="@string/profile_phone_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_last_name_fixed" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/profile_email_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
         android:layout_marginTop="16dp"
         android:text="@string/profile_email_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_phone_fixed" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/profile_password_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
         android:layout_marginTop="16dp"
         android:text="@string/profile_password_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_email_fixed" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/profile_points_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
         android:text="@string/profile_points_text"
         app:layout_constraintStart_toEndOf="@+id/profile_image"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_champ_image" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/profile_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:text="300"
-        app:layout_constraintStart_toEndOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintStart_toEndOf="@+id/profile_points_fixed"
+        app:layout_constraintTop_toBottomOf="@+id/profile_champ_image" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/profile_champ_image"
         android:layout_width="81dp"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
