--- a/Projekat/app/src/main/res/layout/activity_friends_profile.xml
+++ b/Projekat/app/src/main/res/layout/activity_friends_profile.xml
@@ -4,6 +4,141 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/orange_gradient_top_down"
     tools:context=".FriendsProfileActivity">
 
+    <ImageView
+        android:id="@+id/friends_profile_user_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/friends_profile_username_fixed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="36dp"
+        android:text="@string/profile_friends_username_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+
+    <TextView
+        android:id="@+id/friends_profile_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="36dp"
+        android:text="lejdidzu"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+
+    <TextView
+        android:id="@+id/friends_profile_first_name_fixed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/profile_first_name_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_username_fixed" />
+
+    <TextView
+        android:id="@+id/friends_profile_first_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:text="Julija"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_first_name_fixed"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_username" />
+
+    <TextView
+        android:id="@+id/friends_profile_last_name_fixed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/profile_last_name_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_first_name_fixed" />
+
+    <TextView
+        android:id="@+id/friends_profile_last_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:text="Pancic"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_last_name_fixed"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_first_name" />
+
+    <ImageView
+        android:id="@+id/friends_profile_champ_image"
+        android:layout_width="58dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_points"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image"
+        app:srcCompat="@drawable/ic_baseline_emoji_events_24" />
+
+    <TextView
+        android:id="@+id/friends_profile_points_fixed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="36dp"
+        android:text="@string/profile_points_text"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_username"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+
+    <TextView
+        android:id="@+id/friends_profile_points"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="36dp"
+        android:text="250"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_points_fixed"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+
+    <CheckBox
+        android:id="@+id/friends_profile_checkbox"
+        android:layout_width="90dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/white"
+        android:checked="true"
+        android:text="@string/friends_profile_check"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_last_name"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_champ_image" />
+
+    <EditText
+        android:id="@+id/friends_profile_search_friends"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="50dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Search user's friends"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_last_name_fixed" />
+
+    <ImageView
+        android:id="@+id/friends_profile_search_button"
+        android:layout_width="56dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="108dp"
+        app:layout_constraintStart_toEndOf="@+id/friends_profile_search_friends"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_points_fixed"
+        app:srcCompat="@drawable/ic_baseline_search_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
