--- a/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
+++ b/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
@@ -30,9 +30,9 @@
 
     <TextView
         android:id="@+id/profile_username"
-        android:layout_width="85dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
         android:layout_marginTop="12dp"
         android:text="lejdidzu"
         android:textAppearance="?android:attr/textAppearanceLarge"
