--- a/Projekat/app/src/main/res/layout/activity_friends_profile.xml
+++ b/Projekat/app/src/main/res/layout/activity_friends_profile.xml
@@ -141,4 +141,13 @@
         app:layout_constraintStart_toEndOf="@+id/friends_profile_search_friends"
         app:layout_constraintTop_toBottomOf="@+id/friends_profile_points_fixed"
         app:srcCompat="@drawable/ic_baseline_search_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        android:id="@+id/recyclerViewFriendsProfile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_search_friends" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
