--- a/Projekat/app/src/main/res/layout/friends_profile_one_friend_layout.xml
+++ b/Projekat/app/src/main/res/layout/friends_profile_one_friend_layout.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_margin="5dp"
+    android:background="@color/black"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_margin="1dp"
+        android:id="@+id/friendsProfile_oneFriend_relativeLayout">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="2dp"
+            android:id="@+id/friendsProfile_oneFriend_profileImage"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="12dp"
+            android:textSize="25dp"
+            android:textStyle="italic"
+            android:layout_toRightOf="@+id/friendsProfile_oneFriend_profileImage"
+            android:id="@+id/friendsProfile_oneFriend_username"/>
+
+    </RelativeLayout>
+
+</RelativeLayout>
