--- a/Projekat/app/src/main/res/layout/activity_my_profile_friends.xml
+++ b/Projekat/app/src/main/res/layout/activity_my_profile_friends.xml
@@ -4,6 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/orange_gradient_top_down"
     tools:context=".MyProfileFriendsActivity">
+
+    <Button
+        android:id="@+id/profile_friends_info_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="200dp"
+        android:text="@string/profile_info_text"
+        app:layout_constraintEnd_toStartOf="@+id/profile_friends_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/profile_friends_friends_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="200dp"
+        android:text="@string/profile_friends_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/profile_friends_info_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/profile_friends_search_friends"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="70dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Search your friends"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_friends_info_button" />
+
+    <ImageView
+        android:id="@+id/profile_friends_search_button"
+        android:layout_width="56dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@+id/profile_friends_search_friends"
+        app:layout_constraintTop_toBottomOf="@+id/profile_friends_info_button"
+        app:srcCompat="@drawable/ic_baseline_search_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_friends_search_button"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="20dp"
+        android:id="@+id/recyclerViewMyFriends"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
