--- a/Projekat/app/src/main/res/layout/my_profile_one_friend_layout.xml
+++ b/Projekat/app/src/main/res/layout/my_profile_one_friend_layout.xml
@@ -1,6 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:id="@+id/profile_friend_firstRelativeLayout">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_margin="2dp"
+        android:id="@+id/profile_friend_profileImage"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/profile_friend_profileImage"
+        android:layout_marginLeft="10dp"
+        android:textSize="20dp"
+        android:text="Pera Peric"
+        android:id="@+id/profile_friend_name"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
+        android:textSize="15dp"
+        android:text="pera"
+        android:id="@+id/profile_friend_username"
+        android:layout_below="@id/profile_friend_name"
+        android:layout_toRightOf="@id/profile_friend_profileImage"/>
+
+    <RelativeLayout
+        android:id="@+id/profile_friends_relativeLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View profile"
+            android:id="@+id/profile_friend_viewProfile"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/profile_friend_viewProfile"
+            android:layout_marginLeft="10dp"
+            android:text="Delete friend"
+            android:id="@+id/profile_friends_deleteFriend"/>
+
+    </RelativeLayout>
+
+</RelativeLayout>
