--- a/Projekat/app/src/main/res/layout/activity_register.xml
+++ b/Projekat/app/src/main/res/layout/activity_register.xml
@@ -8,57 +8,89 @@
     tools:context=".RegisterActivity">
 
     <ImageView
-        android:id="@+id/register_imageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="0dp"
+        android:id="@+id/wifi_image"
+        android:src="@drawable/ic_outline_wifi_24"
+        android:layout_marginTop="30dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/register_in"
+        android:layout_below="@+id/wifi_image"
+        android:text="@string/registration"
+        android:textColor="@android:color/white"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_centerHorizontal="true"/>
+
+    <ImageView
+        android:id="@+id/register_imageView"
+        android:layout_marginTop="30dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="60dp"
+        android:layout_below="@+id/register_in"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
-    <EditText
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        android:hint="First name"
-        android:id="@+id/register_firstname"
-        android:layout_below="@+id/register_imageView"/>
+        android:layout_below="@+id/register_imageView"
+        android:id="@+id/register_upload_photo"
+        android:layout_marginHorizontal="45dp"
+        android:text="Upload photo"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        android:hint="Last name"
+        android:hint="@string/firstname"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="30dp"
+        android:id="@+id/register_firstname"
+        android:layout_below="@+id/register_upload_photo"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/lastname"
+        android:layout_marginHorizontal="30dp"
         android:layout_below="@+id/register_firstname"
         android:id="@+id/register_lastname"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        android:hint="Phone number"
+        android:hint="@string/phonenumber"
+        android:layout_marginHorizontal="30dp"
         android:layout_below="@+id/register_lastname"
         android:id="@+id/register_phonenumber"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        android:hint="Username"
+        android:hint="@string/username"
+        android:layout_marginHorizontal="30dp"
         android:layout_below="@+id/register_phonenumber"
         android:id="@+id/register_username"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        android:hint="Email address"
+        android:hint="@string/email"
+        android:layout_marginHorizontal="30dp"
         android:layout_below="@+id/register_username"
         android:id="@+id/register_emailaddress"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        android:hint="Password"
+        android:hint="@string/password"
+        android:layout_marginHorizontal="30dp"
         android:layout_below="@+id/register_emailaddress"
         android:id="@+id/register_password"/>
 
@@ -68,7 +100,7 @@
         android:id="@+id/register_btn"
         android:text="Register"
         android:layout_centerHorizontal="true"
-        android:layout_margin="1dp"
+        android:layout_margin="10dp"
         android:layout_below="@+id/register_password"/>
 
     <TextView
