--- a/Projekat/app/src/main/res/layout/activity_home.xml
+++ b/Projekat/app/src/main/res/layout/activity_home.xml
@@ -4,12 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/orange_gradient_top_down"
     tools:context=".HomeActivity">
 
-    <Button
-        android:id="@+id/home_logout_btn"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log out" />
+        android:id="@+id/wifinder"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:text="@string/wifinder"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/login_image"/>
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="0dp"
+        android:id="@+id/login_image"
+        android:src="@drawable/ic_outline_wifi_24"
+        android:layout_marginTop="30dp"
+        />
+
+    <Button
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:id="@+id/menu_profile"
+        android:layout_below="@+id/wifinder"
+        android:text="Profile"
+        android:background="@drawable/rounded_corners"/>
+
+    <Button
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:id="@+id/menu_notifications"
+        android:layout_below="@+id/menu_profile"
+        android:text="Notifications"
+        android:background="@drawable/rounded_corners"/>
+
+    <Button
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:id="@+id/menu_find_friends"
+        android:layout_below="@+id/menu_notifications"
+        android:text="Find friends"
+        android:background="@drawable/rounded_corners"/>
+
+    <Button
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:id="@+id/menu_rang_list"
+        android:layout_below="@+id/menu_find_friends"
+        android:text="Rang list"
+        android:background="@drawable/rounded_corners"/>
+
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:id="@+id/menu_explore"
+        android:layout_below="@+id/menu_rang_list"
+        android:text="Explore"
+        android:background="@drawable/rounded_corners"/>
 
 </RelativeLayout>
