--- a/Projekat/app/src/main/res/layout/activity_register.xml
+++ b/Projekat/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="0dp"
         android:id="@+id/wifi_image"
         android:src="@drawable/ic_outline_wifi_24"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         />
 
     <TextView
@@ -22,14 +22,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/register_in"
         android:layout_below="@+id/wifi_image"
-        android:text="@string/registration"
+        android:text="@string/wifinder"
         android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_centerHorizontal="true"/>
 
     <ImageView
         android:id="@+id/register_imageView"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="60dp"
@@ -43,13 +43,13 @@
         android:id="@+id/register_upload_photo"
         android:layout_marginHorizontal="45dp"
         android:text="Upload photo"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="5dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/firstname"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="30dp"
         android:id="@+id/register_firstname"
         android:layout_below="@+id/register_upload_photo"/>
