--- a/Projekat/app/src/main/res/layout/my_profile_one_friend_layout.xml
+++ b/Projekat/app/src/main/res/layout/my_profile_one_friend_layout.xml
@@ -25,6 +25,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/profile_friend_id"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginLeft="10dp"
         android:textSize="15dp"
