--- a/Projekat/app/src/main/res/layout/one_wi_fi_suggestion.xml
+++ b/Projekat/app/src/main/res/layout/one_wi_fi_suggestion.xml
@@ -16,6 +16,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/oneWiFiSuggestion_id"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/oneWiFiSuggestion_imageView"
         android:id="@+id/oneWiFiSuggestion_textView"
         android:textSize="15dp"
